fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 32123  # Specify the nodePort you want to use
  selector:
    app: fastapi
